--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Franyo krisztian</title>
 </head>
 <body>
+    <section>
+        <button class="bal ">bal </button>
+      <div><img src="" alt="" ></div>
+      <button class="jobb ">jobb </button>
+    </section>
+    <article>
+
+    </article>
     
+
 </body>
 </html>
