--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Franyo krisztian</title>
     <script src="main.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <section>
-        <button class="bal ">bal </button>
-      <div><img src="" alt="" ></div>
-      <button class="jobb ">jobb </button>
-    </section>
-    <article>
-
-    </article>
-    
-
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <section>
+        <button class="bal">bal</button>
+        <div><img src="" alt="" /></div>
+        <button class="jobb">jobb</button>
+      </section>
+      <article></article>
+    </main>
+  </body>
 </html>
